--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -10,7 +10,7 @@ h1 {
 }
 
 .hero {
-    background-image: url("resources/images/the-flatiron-building.png");
+    background-image: url("../images/the-flatiron-building.png");
 }
 
 h2 {
@@ -26,11 +26,12 @@ h3 {
 footer{
     font-size: 11px;
     font-weight: bold;
+    color: white;
     background-color: lightgray;
     text-align: left;
 }
 
-nav {
+.whitefont {
     color: white;
     font-weight:bold;
 }
